# segbot_arm

./: .gitignore  .travis.rosinstall  .travis.yml  .travis.yml.old  CMakeLists.txt  README.md  dummyfile.txt  package.xml  turtle_joy.launch
bagfiles/: capture_all.sh  capture_csv_all.sh  clear_all.sh  test.sh
demos/draw_demo/: CMakeLists.txt  package.xml
demos/draw_demo/src/: approach_board.cpp  distPub.cpp  draw.cpp  moveFingers.cpp  movement_demo.cpp  recordPoints.cpp  recordTrajectory.cpp  shapes.cpp
demos/fidget/: CMakeLists.txt  package.xml  setup.py
demos/fidget/launch/: demo.launch
demos/fidget/scripts/: fidget.py
demos/standalone/robot_arm/: CMakeLists.txt  package.xml
demos/standalone/robot_arm/launch/: segmentation.launch
demos/standalone/robot_arm/opencv/: CMakeCache.txt  CMakeLists.txt  Makefile  canny  canny.cpp  cmake_install.cmake  findContours  findContours.cpp  readme.txt  sampleOutput.cdcode  test.cdcode  thresh  thresh.cpp  transforms
demos/standalone/robot_arm/src/: draw.cpp  moveFingers.cpp  recordTrajectory.cpp  shapes.cpp  visionDistance.cpp
dynamixel/: README.md
dynamixel/dynamixel_arm/: package.xml
dynamixel/dynamixel_arm/config/: dynamixel_arm_position_controller.yaml  dynamixel_arm_torque_controller.yaml
dynamixel/dynamixel_arm/launch/: dynamixel_bringup.launch  position_controller_manager.launch  torque_controller_manager.launch
dynamixel/dynamixel_arm/src/: dynamixel_driver.py
dynamixel_arm/: CMakeLists.txt
grounded_learning/grounded_logging/: CMakeLists.txt
grounded_learning/grounded_logging/src/: audio_logging_server.cpp  audio_publisher.cpp  process_audio_client.cpp  vision_logging_server.cpp
grounded_learning/grounded_logging/src/include/: CircularBuffer.h  fft_visualizer.h
grounded_learning/grounded_logging/srv/: ProcessAudio.srv
grounded_logging/: CMakeLists.txt  FindFFTW.cmake  package.xml
grounded_logging/launch/: grounded_logging.launch
grounded_logging/src/: audio_logging_server.cpp  audio_publisher.cpp  average_over_trials.cpp  colour_and_shape_average.cpp  denoise_dft.cpp  extract_features_dft.cpp  extract_features_haptic.cpp  extract_finger_position_vector.cpp  extract_object_color.cpp  grounded_logging_client.cpp  look_behavior.cpp  look_behavior_client.cpp  object_feature_extraction_client.cpp  point_cloud_viewer.cpp  process_audio.cpp  vision_logging_server.cpp
grounded_logging/src/include/: BackgroundModelFFT.h  alsa_utils.h  fft_calculator_dq.h  math_utils.h
grounded_logging/srv/: ProcessAudio.srv  ProcessVision.srv  StorePointCloud.srv
launch/: .joystick_bwi.launch.swo  joystick_bwi.launch  segbot_arm_joystick.launch
mico_moveit_config/: .setup_assistant  package.xml
mico_moveit_fullsegbot_config/: .setup_assistant  (+2 more)
moveit_utils/: CMakeLists.txt  package.xml
moveit_utils/launch/: mico_controller_manager.launch  mico_moveit.launch  moveit_utils.launch  segbot_v2_mico.launch
moveit_utils/positions/: drop.bag  drop_2.bag  drop_right.bag  drop_sub.bag  grab.bag  grab_right.bag  grab_right_sub.bag  hide.bag  lift_base.bag  poke.bag  press.bag  press_right.bag  press_sub.bag  push.bag  push_right.bag  sub_grab.bag  test.bag
moveit_utils/src/: angular_vel_control_srv.cpp  fidget.cpp  fidget_grasp_experiment.cpp  fidget_pattern_experiment.cpp  mico_controller.cpp  mico_controller_action.cpp  mico_joint_angle_plugin.cpp  mico_joint_velocity_controller.cpp  mico_moveit_cartesianpose_obstacle_service.cpp  mico_moveit_cartesianpose_service.cpp  mico_moveit_jointpose_service.cpp  mico_nav_safety_service.cpp  position_record.cpp  trajectory_record.cpp
moveit_utils/srv/: MicoController.srv  MicoMoveitCartesianPose.srv  MicoMoveitCartesianPoseObstacle.srv  MicoMoveitJointPose.srv  NavigationSafety.srv
moveit_utils/trajectories/: front_appch_to_side.bag  front_grab_to_side_grab.bag  grab_from_home_1.bag  grab_from_home_close.bag  home_to_grasp_real.bag  nenu.bag  none.bag  object1_grasp.bag  object2_grasp.bag  side_grasp_from_home.bag
segbot_arm_launch/: CMakeLists.txt  package.xml
segbot_arm_launch/launch/: auxiliary.segbot_v2.arm.launch.xml  segbot_bringup_v2.arm.launch  segbot_v2.arm.full_stack.launch  segbot_v2.arm.launch  segbot_v2_fidget_experiment.arm.launch  xtion.launch
segbot_arm_launch/launch/includes/: auxiliary.segbot_v2.arm.launch.xml
segbot_arm_launch/robots/: segbot_v2.arm.urdf  segbot_v2.arm.urdf.xacro  segbot_v2.arm.xacroout.urdf
segbot_arm_manipulation/: CMakeLists.txt  out.txt  package.xml  setup.py
segbot_arm_manipulation/action/: LiftVerify.action  Press.action  Push.action  Shake.action  TabletopGrasp.action
segbot_arm_manipulation/data/: jointspace_position_db.txt  toolspace_position_db.txt
segbot_arm_manipulation/include/segbot_arm_manipulation/: MicoManager.h  arm_actions.py  arm_positions_db.h  arm_utils.h  grasp_utils.h
segbot_arm_manipulation/launch/: segbot_arm_explore.launch  segbot_arm_manipulation.launch
segbot_arm_manipulation/src/: MicoManager.cpp  arm_actions.py  arm_lift_verify_as.cpp  arm_press_as.cpp  arm_push_as.cpp  arm_shake_as.cpp  ispy_arm_server.cpp  segbot_obj_replacement_as.cpp  segbot_table_approach_as.cpp  segbot_tabletop_grasp_as.cpp
segbot_arm_manipulation/src/demos/: demo_explore_object.cpp  demo_grasp_action_client.cpp  demo_grasp_verify.cpp  demo_hand_lead.cpp  demo_obstacle_avoidance.cpp  demo_press_button.cpp  object_to_office_task.cpp  test_grasp_replacement.cpp  test_handover_replacement.cpp  test_ispy.cpp  test_table_approach_actions.cpp
segbot_arm_tasks/: CMakeLists.txt  package.xml
segbot_arm_tasks/action/: MicoRotateHand.action  MicoShake.action
segbot_arm_tasks/launch/: object_delivery.launch
segbot_arm_tasks/src/: mico_rotate_hand_action.cpp  mico_shake_action.cpp  object_handover_delivery_task.cpp  object_table_delivery_task.cpp  object_to_office_task.cpp
segbot_arm_tutorials/: CMakeLists.txt  package.xml
segbot_arm_tutorials/src/: ex1_subscribing_to_topics.cpp  ex2_gripper.cpp  ex3_home_arm.cpp  ex4_cartesian_vel_control.cpp  ex5_angular_vel_control.cpp  ex6_detect_force.cpp  ex7_moveit.cpp
(+952 files in other folders)
