<?xml version="1.0"?>
<package>
  <name>segbot_arm_joystick</name>
  <version>0.0.0</version>
  <description>The segbot_arm_joystick package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="benjamin.z.singer@utexas.edu">Benjamin Singer</maintainer>
  <maintainer email="palak_hirpara@yahoo.com">Palak Hirpara</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/joystick_bwi</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ps3joy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>segbot_arm_perception</build_depend>
  <build_depend>moveit_utils</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>segbot_arm_manipulation</build_depend>
  <build_depend>bwi_msgs</build_depend>




  <run_depend>ps3joy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>jaco_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>segbot_arm_perception</run_depend>
  <run_depend>moveit_utils</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>segbot_arm_manipulation</run_depend>
  <run_depend>bwi_msgs</run_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
