<?xml version="1.0"?>
<package>
  <name>moveit_utils</name>
  <version>0.1.0</version>
  <description>The moveit_utils package</description>
  <maintainer email="maxsvetlik@utexas.edu">Maxwell Svetlik</maintainer>
  <license>BSD</license>
  <author email="maxsvetlik@utexas.edu">Maxwell Svetlik</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>moveit</build_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
