<?xml version="1.0"?>
<package>
  <name>segbot_arm_launch</name>
  <version>0.0.0</version>
  <description>Package contains URDF description file and launch for segbot v2 arm robot.</description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>segbot_bringup</run_depend>
  <run_depend>segbot_description</run_depend>
  <run_depend>bwi_launch</run_depend>

</package>
