<?xml version="1.0"?>
<package>
  <name>segbot_arm_manipulation</name>
  <version>0.0.1</version>
  <description>The mimic_motion package</description>

  <maintainer email="jsinapov@cs.utexas.edu">Jivko Sinapov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
 
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>jaco_msgs</build_depend>
  <build_depend>moveit_utils</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>segbot_arm_perception</build_depend>
  
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>jaco_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>segbot_arm_perception</run_depend>

  <export></export>
</package>
