<?xml version="1.0"?>
<package>
  <name>segbot_arm_tasks</name>
  <version>0.0.0</version>
  <description>This package holds independent tasks that can be performed by the arm. Initial examples will be actionlib servers with tasks such as shake, lift, etc.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="maxsvetlik@gmail.com">Maxwell J Svetlik</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kinova_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>segbot_arm_perception</build_depend>
  <build_depend>moveit_utils</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>segbot_arm_manipulation</build_depend>
  <build_depend>bwi_msgs</build_depend>
  <build_depend>bwi_kr_execution</build_depend>

  <run_depend>kinova_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>segbot_arm_perception</run_depend>
  <run_depend>moveit_utils</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>segbot_arm_manipulation</run_depend>
  <run_depend>bwi_msgs</run_depend>
  <run_depend>bwi_kr_execution</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
